added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first ever git wev</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id perferendis sequi dolores commodi labore cum veritatis magnam dolor eaque totam amet ut ex, ullam voluptatum, similique illum dignissimos doloribus praesentium?</p>
+    </div>
 </body>
 </html> 
